@@ -21,6 +21,9 @@
 "DETAIL_INSANE","Insane","Tree LOD detail option - absolute maximum resolution, but only looks a little bit better than ultra."
 "LOCK_FORESTRY","Lock forestry","Checkbox in options panel."
 "LOCK_FORESTRY_TIP","If this is selected, adding or removing trees won't affect the map's forestry resource coverage.","Checkbox tooltip in options panel."
+"TROUBLESHOOTING","Troubleshooting","Options pnael header."
+"IGNORE_TA_DATA","Ignore Tree Anarchy mod data","Checkbox in options panel."
+"IGNORE_TA_DATA_TIP","If this is selected, any data left in the savefile by the Tree Anarchy mod will be ignored. Enable this if you're having issues loading games saved with the Tree Anarchy mod.","Checkbox tooltip in options panel."
 "KEY_ANARCHY","Toggle tree anarchy","Options panel key setting text."
 "KEY_ELEVATION_UP","Raise tree","Options panel key setting text."
 "KEY_ELEVATION_DOWN","Lower tree","Options panel key setting text."
